k8s/apisix-route/argocd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-clusterip
  namespace: argocd
spec:
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
