k8s/apisix-route/istio-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: TLS
      tls:
        mode: PASSTHROUGH
      hosts:
        - argo.jorge-gonzalez.info

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
    - argo.jorge-gonzalez.info
  gateways:
    - argocd-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - argo.jorge-gonzalez.info
          
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 443
